--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "express": "^4.21.1",
+    "get-image-colors": "^4.0.1",
     "get-pixels": "^3.3.3",
-    "node-vibrant": "^3.2.1-alpha.1",
     "sharp": "^0.33.5"
   }
 }
