--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "dfpwm": "^1.2.2",
     "express": "^4.21.1",
     "get-image-colors": "^4.0.1",
     "get-pixels": "^3.3.3",
     "sharp": "^0.33.5",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zlib": "^1.0.5"
   }
 }
